etc/amh-iptables
# Generated by iptables-save v1.4.14 on Tue Oct 28 13:04:58 2014
*mangle
:PREROUTING ACCEPT [711495:399838787]
:INPUT ACCEPT [711495:399838787]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [707135:302281297]
:POSTROUTING ACCEPT [707135:302281297]
COMMIT
# Completed on Tue Oct 28 13:04:58 2014
# Generated by iptables-save v1.4.14 on Tue Oct 28 13:04:58 2014
*nat
:PREROUTING ACCEPT [19516:1051805]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [31147:1990559]
-A POSTROUTING -j MASQUERADE
COMMIT
# Completed on Tue Oct 28 13:04:58 2014
# Generated by iptables-save v1.4.14 on Tue Oct 28 13:04:58 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m tcp --dport 58888 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10100:10110 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 21 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 500 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8388 -j ACCEPT
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -j ACCEPT
-A input DROP
COMMIT
# Completed on Tue Oct 28 13:04:58 2014
